--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Css styles -->
     <link rel="stylesheet" href="./index.css" />
@@ -15,16 +14,19 @@
     <title>e-Mail Sender Application</title>
   </head>
   <body>
-    <form style="max-width: 500px; margin: auto">
-      <h2>e-Mail Sender Application</h2>
+    <form id = "ipcForm" onSubmit="JavaScript:sendForm(event)" 
+    style="max-width: 600px; margin: auto"  
+    >
+      <h2>Disposable Email Sender</h2>
       <div class="input-wrapper">
         <i class="fa fa-user icon"></i>
 
         <input
+          id = "email"
           class="input-field"
           type="text"
-          placeholder="To: i.e unclebigbay@gmail.com"
-          name="email"
+          placeholder="To:"
+          name="email"    
           autocomplete="off"
           required
         />
@@ -33,6 +35,7 @@
         <i class="fa fa-envelope icon"></i>
 
         <input
+          id = "subject"
           class="input-field"
           type="text"
           placeholder="Subject"
@@ -46,17 +49,13 @@
           id="message"
           name="message"
           placeholder="Message body.."
-          style="height: 200px; width: 100%"
+          style="height: 350px; width: 100%"
           required
         ></textarea>
       </div>
-
-      <div class="attachment-wrapper">
-        <label for="attachment">Attachment</label>
-        <input id="attachment" name="attachment" type="file" required/>
-      </div>
-
-      <button type="submit" class="send-btn">Send Mail</button>
+      <button type="submit" class="send-btn" id = "sendbutton">Send Mail</button>
     </form>
+    <script src = "./scripts/script.js"></script>
+    <script src="javascript/jquery-1.6.1.js"></script>
   </body>
 </html>
