--- a/src/html/success.html
+++ b/src/html/success.html
@@ -17,6 +17,6 @@
     <i class="fa fa-paper-plane icon"></i>
 
     <h1>Message Was Successfully Delivered</h1>
-    <a href="./index.html">New message</a>
+    <a href="./index.html">Want to Send Another One?</a>
   </body>
 </html>
