--- a/src/html/failure.html
+++ b/src/html/failure.html
@@ -17,10 +17,7 @@
     <i class="fa fa-paper-plane icon"></i>
     <h1>Message Was NOT Successfully Delivered. Try Again?</h1>
     <a href="./index.html">Click Here To Reattempt</a>
-    <p id = "info" style = "text-align: center; 
-    font-size: large; 
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-    ></p>
+    <p id = "info"></p>
     <script src = './scripts/info.js'></script>
   </body>
 </html>
