--- a/src/html/index.html
+++ b/src/html/index.html
@@ -110,6 +110,7 @@
           required
         ></textarea>
       </div>
+      <button type="submit" class="send-btn" id = "sendbutton">Send Mail</button>
     </form>
   </div>
 </div>
